feat: add delete collection option
